...
    <!-- Login Fragment -->
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="get_otp">Get OTP</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_details">Please enter your details!</string>

    <!-- Job List Fragment -->
    <string name="hello_contractor">Hello, Contractor!</string>
    <string name="all_jobs">All Jobs</string>
    <string name="start_new_job">Start New Job</string>
    <string name="resume_job">Resume Job</string>
...
