<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/jobListFragment">
    <activity
        android:id="@+id/mainActivity"
        android:name="com.ntu.staizen.EasyTracker.MainActivity"
        android:label="MainActivity" />
    <fragment
        android:id="@+id/loginFragment"
...
